tests/success/typechecking/Cases.vix

the : (A : Type) -> A -> A
the _ x = x

test b = case b of
  True -> the (forall a. a -> a) \x. x
  False -> \x. x

test2 : Bool -> forall a. a -> a
test2 b = case b of
  True -> the (forall a. a -> a) \x. x
  False -> the (forall a. a -> a) \x. x

-- These require deep skolemisation
test3 : Bool -> forall a. a -> a
test3 b = case b of
  True -> the (forall a. a -> a) \x. x
  False -> \x. x

test4 : Bool -> forall a. a -> a
test4 b = case b of
  True -> \x. x
  False -> \x. x
